welcome.lessons.welcome.array.island.Island.scala.error
island:14: error: not found: value cliff
	return cliff - 1;
               ^